# rust-rpc-router

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
dev/specs/: spec-fn-handler.md
doc/: README.md  all-apis.md  api-reference-standard.md
doc/for-llm/: api-reference-for-llm.md
examples/: c00-readme.rs  c01-simple.rs  c02-async-tasks.rs  c02-multi-calls.rs  c03-resources-shared.rs  c03-shared-resources.rs  c03-with-derives.rs  c04-custom-error.rs  c04-with-derives.rs  c05-error-handling.rs  c05-with-derives.rs  c06-error-handling.rs
rpc-router-macros/: Cargo.toml
rpc-router-macros/src/: derive_handler_error.rs  derive_params.rs  derive_resource.rs  lib.rs
src/: blankets_into_params.rs  error.rs  from_resources.rs  into_params.rs  into_rpc_params.rs  lib.rs  rpc_handler.rs  rpc_id.rs  rpc_request.rs  rpc_router.rs  support.rs
src/handler/: handler.rs  handler_error.rs  handler_wrapper.rs  impl_handlers.rs  impl_rpc_handlers.rs  mod.rs  rpc_call_error.rs  rpc_handler.rs  rpc_handler_error.rs  rpc_handler_wrapper.rs
src/macros/: impl_handler_macro.rs  mod.rs
src/params/: into_params.rs  mod.rs
src/request/: mod.rs  request.rs  request_parsing_error.rs
src/resource/: extensions.rs  from_resources.rs  from_rpc_resources.rs  mod.rs  resources.rs  resources_builder_macro.rs  resources_inner.rs  rpc_resources.rs  store.rs
src/router/: call_error.rs  call_response.rs  call_success.rs  mod.rs  router.rs  router_builder.rs  router_builder_macro.rs  router_inner.rs
src/rpc_message/: mod.rs  notification.rs  rpc_request_parsing_error.rs  support.rs
src/rpc_request/: mod.rs  request.rs  rpc_request_parsing_error.rs
src/rpc_response/: mod.rs  response.rs  rpc_error.rs  rpc_response_parsing_error.rs
tests/: test-base-resources.rs  test-calls.rs  test-custom-error.rs
