[package]
name = "rpc-router-macros"
version = "0.2.0-rc.1-WIP"
authors = ["jeremy.chone@gmail.com"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Proc Macros for rpc-router crate"
keywords = [
	"rpc",
	"json-rpc",
]
homepage = "https://github.com/jeremychone/rust-rpc-router"
repository = "https://github.com/jeremychone/rust-rpc-router"

[lints]
workspace = true

[dependencies]
quote = "1"
syn = {version = "2", features = ["full"]}

[lib]
proc-macro = true